# api_pokemon

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  library.md  pokemon.py  pyproject.toml  test_pokemon.py
.github/workflows/: ci.yml  deploy.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: pokemons.py
app/cache/: base.py  memory.py  redis_cache.py
app/core/: exceptions.py  logging.py  security.py
app/db/: __init__.py  models.py  session.py
app/middleware/: request_context.py
app/models/: pagination.py  pokemon.py
app/services/: pokeapi_client.py  pokemon_service.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py
tests/integration/: test_endpoints.py
tests/unit/: test_cache.py  test_pagination.py  test_pokemon_service.py
