[project]
name = "api-pokemon"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas De Lucena Limeira",email = "lucasdllimeira@hotmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
